feat: init backend template

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "db:init": "turbo db:init"
+    "db:push": "turbo run db:push"
   },
   "devDependencies": {
     "turbo": "latest"
