--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "db:init": "dotenv -e ../../.env prisma migrate dev --name init",
+    "db:push": "prisma db push",
     "dev": "nodemon index.js"
   },
   "author": "",
@@ -16,6 +17,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "nodemon": "^3.0.1",
     "prisma": "^5.3.1"
   }
 }
